# chesse

./: CMakeLists.txt  README.md
doc/: TODO.txt
doc/.vscode.sample/: launch.json  settings.json
doc/.vscode_sample/: launch.json  settings.json
src/: bishop.cpp  bishop.h  board.cpp  board.h  boardvision.h  chess.cpp  defs.h  empty.cpp  empty.h  gameplay.cpp  gameplay.h  helper.cpp  helper.h  iboard.h  ipiece.h  king.cpp  king.h  knight.cpp  knight.h  pawn.cpp  pawn.h  piece.cpp  piece.h  player.cpp  player.h  queen.cpp  queen.h  rook.cpp  rook.h
test/: .gitignore  CMakeLists.txt
test/src/: bishop_tests.cc  bishop_tests.h  gameplay_tests.cc  gameplay_tests.h  king_tests.cc  king_tests.h  knight_tests.cc  knight_tests.h  main.cpp  pawn_tests.cc  pawn_tests.h  queen_tests.cc  queen_tests.h  rook_tests.cc  rook_tests.h  test_helper.cpp  test_helper.h
